--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "guesswhat"
+authors = ["Rahul M. Navneeth"]
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/RahulNavneeth/guesswhat/"
 
 [dependencies]
 rand = "0.8.4"
